// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <_default>
    <section
      className="demographics-banner large-demographics-banner orion-fusion-theme"
    >
      <div
        className="content"
      >
        <div
          className="row"
        >
          <h1
            className="person-name"
          />
          <div
            className="application-content"
          />
        </div>
        <div
          className="row"
        >
          <div
            className="person-details"
          >
            <DemographicsBannerValue
              key="age"
            >
              <span
                className="value"
              >
                <span
                  className="value-text"
                />
              </span>
            </DemographicsBannerValue>
            <DemographicsBannerValue
              key="gender"
            >
              <span
                className="value"
              >
                <span
                  className="value-text"
                />
              </span>
            </DemographicsBannerValue>
            <DemographicsBannerValue
              key="dob"
            >
              <span
                className="value"
              >
                <span
                  className="value-text"
                />
              </span>
            </DemographicsBannerValue>
          </div>
          <div
            className="identifiers"
          />
        </div>
      </div>
    </section>
  </_default>
</ThemeContextProvider>
`;

exports[`renders large banner that contains all valid information 1`] = `
<section
  applicationRows={
    Array [
      Object {
        "Address": "1501 Walnut St. Apt #123",
        "City": "Kansas City MO",
      },
      Object {
        "ZIP": 64108,
      },
    ]
  }
  className="demographics-banner large-demographics-banner"
>
  <div
    className="profile-photo"
  >
    <Image
      alt="My Cat"
      fit="fill"
      isFluid={false}
      src=""
      variant="default"
    />
  </div>
  <div
    className="content"
  >
    <div
      className="row"
    >
      <h1
        className="person-name"
      >
        Johnathon Doe
        <span
          className="preferred-first-name"
        >
          John
        </span>
      </h1>
      <div
        className="application-content"
      >
        <span
          className="risk-score"
        >
          5%
        </span>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="person-details"
      >
        <DemographicsBannerValue
          key="age"
          value="25 Years"
        />
        <DemographicsBannerValue
          key="gender"
          value="Male"
        />
        <DemographicsBannerValue
          key="dob"
          label="DOB"
          value="May 9, 1993"
        />
      </div>
      <div
        className="identifiers"
      >
        <DemographicsBannerValue
          key="identifier-MRN"
          label="MRN"
          value={12343}
        />
        <DemographicsBannerValue
          key="identifier-REA"
          label="REA"
          value="3JSDA"
        />
      </div>
    </div>
  </div>
</section>
`;
